QTBUG-21058: Fix for possible crashes in QTextControl::setCursorWidth()

Cursor's width is now queried from the style only when the user calls
cursorWidth(). Earlier it was queried already in the ctor, which
caused crashes if the application was guiless.

Merge-request: 2697
Reviewed-by: Jan-Arve Saether <jan-arve.saether@nokia.com>